--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the official list of scheduling authors for copyright purposes.
+# This is the official list of rounding authors for copyright purposes.
 
 # If you are submitting a patch, please add your name or the name of the
 # organization which holds the copyright to this list in alphabetical order.
